@@ -18,8 +18,8 @@
  */
 package org.structr.core.entity;
 
+import java.util.stream.Collectors;
 import org.apache.commons.codec.digest.DigestUtils;
-import org.apache.commons.lang3.ArrayUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -35,7 +35,6 @@ import org.structr.common.error.*;
 import org.structr.core.GraphObject;
 import org.structr.core.IterableAdapter;
 import org.structr.core.Services;
-import org.structr.core.app.App;
 import org.structr.core.app.StructrApp;
 import org.structr.core.converter.PropertyConverter;
 import org.structr.core.entity.relationship.Ownership;
@@ -49,9 +48,12 @@ import org.structr.schema.action.ActionContext;
 import org.structr.schema.action.EvaluationHints;
 import org.structr.schema.action.Function;
 
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
 import java.util.*;
+import org.structr.common.helper.ValidationHelper;
+import org.structr.core.api.AbstractMethod;
+import org.structr.core.api.Arguments;
+import org.structr.core.api.Methods;
+import java.util.LinkedList;
 
 /**
  * Abstract base class for all node entities in Structr.
@@ -60,7 +62,7 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 
 	private static final int permissionResolutionMaxLevel                                                     = Settings.ResolutionDepth.getValue();
 	private static final Logger logger                                                                        = LoggerFactory.getLogger(AbstractNode.class.getName());
-	private static final FixedSizeCache<String, Boolean> isGrantedResultCache                                 = new FixedSizeCache<String, Boolean>("Grant result cache", 100000);
+	private static final FixedSizeCache<String, Boolean> isGrantedResultCache                                 = new FixedSizeCache<>("Grant result cache", 100000);
 	private static final FixedSizeCache<String, Object> relationshipTemplateInstanceCache                     = new FixedSizeCache<>("Relationship template cache", 1000);
 	private static final Map<String, Map<String, PermissionResolutionResult>> globalPermissionResolutionCache = new HashMap<>();
 
@@ -77,9 +79,9 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 	private boolean readOnlyPropertiesUnlocked      = false;
 	protected String cachedUuid                     = null;
 	protected SecurityContext securityContext       = null;
-	protected Principal cachedOwnerNode             = null;
+	protected PrincipalInterface cachedOwnerNode             = null;
 	protected Class entityType                      = null;
-	protected Node dbNode                           = null;
+	protected Identity nodeId                       = null;
 
 	public AbstractNode() {
 	}
@@ -89,7 +91,7 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 	}
 
 	@Override
-	public void onNodeCreation() {
+	public void onNodeCreation(final SecurityContext securityContext) throws FrameworkException {
 	}
 
 	@Override
@@ -105,9 +107,9 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 	public final void init(final SecurityContext securityContext, final Node dbNode, final Class entityType, final long sourceTransactionId) {
 
 		this.sourceTransactionId = sourceTransactionId;
-		this.dbNode              = dbNode;
 		this.entityType          = entityType;
 		this.securityContext     = securityContext;
+		this.nodeId              = dbNode.getId();
 
 		// simple validity check
 		if (dbNode != null && !this.isGenericNode()) {
@@ -162,12 +164,12 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 	@Override
 	public int hashCode() {
 
-		if (this.dbNode == null) {
+		if (getNode() == null) {
 
 			return (super.hashCode());
 		}
 
-		return dbNode.getId().hashCode();
+		return getNode().getId().hashCode();
 
 	}
 
@@ -244,19 +246,10 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 
 		if (!isGranted(Permission.write, securityContext)) {
 
-			final Principal currentUser = securityContext.getUser(false);
-			String user = null;
-
-			if (currentUser == null) {
-				user = securityContext.isSuperUser() ? "superuser" : "anonymous";
-			} else {
-				user = currentUser.getProperty(AbstractNode.id);
-			}
-
-			throw new FrameworkException(403, "Modification of node " + this.getProperty(AbstractNode.id) + " with type " + this.getProperty(AbstractNode.type) + " by user " + user + " not permitted.");
+			throw new FrameworkException(403, getModificationNotPermittedExceptionString(this, securityContext));
 		}
 
-		if (this.dbNode != null) {
+		if (getNode() != null) {
 
 			if (key == null) {
 
@@ -277,7 +270,7 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 					internalSystemPropertiesUnlocked = false;
 				} else {
 
-					throw new FrameworkException(404, "Property " + key.jsonName() + " is read-only", new ReadOnlyPropertyToken(getType(), key));
+					throw new FrameworkException(404, "Property ‛" + key.jsonName() + "‛ is read-only", new ReadOnlyPropertyToken(getType(), key.jsonName()));
 				}
 
 			}
@@ -293,12 +286,12 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 					internalSystemPropertiesUnlocked = false;
 				} else {
 
-					throw new FrameworkException(404, "Property " + key.jsonName() + " is read-only", new InternalSystemPropertyToken(getType(), key));
+					throw new FrameworkException(404, "Property ‛" + key.jsonName() + "‛ is read-only", new InternalSystemPropertyToken(getType(), key.jsonName()));
 				}
 
 			}
 
-			dbNode.removeProperty(key.dbName());
+			getNode().removeProperty(key.dbName());
 		}
 
 	}
@@ -310,7 +303,7 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 
 	@Override
 	public final PropertyContainer getPropertyContainer() {
-		return dbNode;
+		return getNode();
 	}
 
 	/**
@@ -321,23 +314,18 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 	@Override
 	public final String getName() {
 
-		String name = getProperty(AbstractNode.name);
-		if (name == null) {
+		String _name = getProperty(AbstractNode.name);
+		if (_name == null) {
 
-			name = getUuid();
+			_name = getUuid();
 		}
 
-		return name;
+		return _name;
 	}
 
 	@Override
 	public final String getUuid() {
-
-		if (cachedUuid == null) {
-			cachedUuid = getProperty(GraphObject.id);
-		}
-
-		return cachedUuid;
+		return getProperty(GraphObject.id);
 	}
 
 	/**
@@ -508,14 +496,19 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 	 */
 	@Override
 	public final Node getNode() {
-		return dbNode;
+		return TransactionCommand.getCurrentTransaction().getNode(nodeId);
+	}
+
+	@Override
+	public boolean isDeleted() {
+		return TransactionCommand.getCurrentTransaction().isNodeDeleted(nodeId.getId());
 	}
 
 	@Override
 	public boolean hasRelationshipTo(final RelationshipType type, final NodeInterface targetNode) {
 
-		if (dbNode != null && type != null && targetNode != null) {
-			return dbNode.hasRelationshipTo(type, targetNode.getNode());
+		if (getNode() != null && type != null && targetNode != null) {
+			return getNode().hasRelationshipTo(type, targetNode.getNode());
 		}
 
 		return false;
@@ -524,10 +517,10 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 	@Override
 	public <R extends AbstractRelationship> R getRelationshipTo(final RelationshipType type, final NodeInterface targetNode) {
 
-		if (dbNode != null && type != null && targetNode != null) {
+		if (getNode() != null && type != null && targetNode != null) {
 
 			final RelationshipFactory<R> factory = new RelationshipFactory<>(securityContext);
-			final Relationship rel               = dbNode.getRelationshipTo(type, targetNode.getNode());
+			final Relationship rel               = getNode().getRelationshipTo(type, targetNode.getNode());
 
 			if (rel != null) {
 
@@ -540,7 +533,7 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 
 	@Override
 	public final <R extends AbstractRelationship> Iterable<R> getRelationships() {
-		return new IterableAdapter<>(dbNode.getRelationships(), new RelationshipFactory<R>(securityContext));
+		return new IterableAdapter<>(getNode().getRelationships(), new RelationshipFactory<>(securityContext));
 	}
 
 	@Override
@@ -551,7 +544,7 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 		final Direction direction            = template.getDirectionForType(entityType);
 		final RelationshipType relType       = template;
 
-		return new IterableAdapter<>(dbNode.getRelationships(direction, relType), factory);
+		return new IterableAdapter<>(getNode().getRelationships(direction, relType), factory);
 	}
 
 	@Override
@@ -559,7 +552,7 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 
 		final RelationshipFactory<R> factory = new RelationshipFactory<>(securityContext);
 		final R template                     = getRelationshipForType(type);
-		final Relationship relationship      = template.getSource().getRawSource(securityContext, dbNode, null);
+		final Relationship relationship      = template.getSource().getRawSource(securityContext, getNode(), null);
 
 		if (relationship != null) {
 			return factory.adapt(relationship);
@@ -574,7 +567,7 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 		final SecurityContext suContext      = SecurityContext.getSuperUserInstance();
 		final RelationshipFactory<R> factory = new RelationshipFactory<>(suContext);
 		final R template                     = getRelationshipForType(type);
-		final Relationship relationship      = template.getSource().getRawSource(suContext, dbNode, null);
+		final Relationship relationship      = template.getSource().getRawSource(suContext, getNode(), null);
 
 		if (relationship != null) {
 			return factory.adapt(relationship);
@@ -589,8 +582,8 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 		final RelationshipFactory<R> factory = new RelationshipFactory<>(securityContext);
 		final R template                     = getRelationshipForType(type);
 
-		//return new IterableAdapter<>(new IdSorter<>(template.getSource().getRawSource(securityContext, dbNode, null)), factory);
-		return new IterableAdapter<>(template.getSource().getRawSource(securityContext, dbNode, null), factory);
+		//return new IterableAdapter<>(new IdSorter<>(template.getSource().getRawSource(securityContext, getNode(), null)), factory);
+		return new IterableAdapter<>(template.getSource().getRawSource(securityContext, getNode(), null), factory);
 	}
 
 	@Override
@@ -598,7 +591,7 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 
 		final RelationshipFactory<R> factory = new RelationshipFactory<>(securityContext);
 		final R template                     = getRelationshipForType(type);
-		final Relationship relationship      = template.getTarget().getRawSource(securityContext, dbNode, null);
+		final Relationship relationship      = template.getTarget().getRawSource(securityContext, getNode(), null);
 
 		if (relationship != null) {
 			return factory.adapt(relationship);
@@ -613,22 +606,22 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 		final RelationshipFactory<R> factory = new RelationshipFactory<>(securityContext);
 		final R template                     = getRelationshipForType(type);
 
-		return new IterableAdapter<>(template.getTarget().getRawSource(securityContext, dbNode, null), factory);
+		return new IterableAdapter<>(template.getTarget().getRawSource(securityContext, getNode(), null), factory);
 	}
 
 	@Override
 	public final <R extends AbstractRelationship> Iterable<R> getIncomingRelationships() {
-		return new IterableAdapter<>(dbNode.getRelationships(Direction.INCOMING), new RelationshipFactory<>(securityContext));
+		return new IterableAdapter<>(getNode().getRelationships(Direction.INCOMING), new RelationshipFactory<>(securityContext));
 	}
 
 	@Override
 	public final <R extends AbstractRelationship> Iterable<R> getOutgoingRelationships() {
-		return new IterableAdapter<>(dbNode.getRelationships(Direction.OUTGOING), new RelationshipFactory<>(securityContext));
+		return new IterableAdapter<>(getNode().getRelationships(Direction.OUTGOING), new RelationshipFactory<>(securityContext));
 	}
 
 	@Override
 	public final <R extends AbstractRelationship> Iterable<R> getRelationshipsAsSuperUser() {
-		return new IterableAdapter<>(dbNode.getRelationships(), new RelationshipFactory<>(SecurityContext.getSuperUserInstance()));
+		return new IterableAdapter<>(getNode().getRelationships(), new RelationshipFactory<>(SecurityContext.getSuperUserInstance()));
 	}
 
 	protected final <A extends NodeInterface, B extends NodeInterface, T extends Target, R extends Relation<A, B, ManyStartpoint<A>, T>> Iterable<R> getIncomingRelationshipsAsSuperUser(final Class<R> type) {
@@ -641,7 +634,7 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 		final RelationshipFactory<R> factory = new RelationshipFactory<>(suContext);
 		final R template                     = getRelationshipForType(type);
 
-		return new IterableAdapter<>(template.getSource().getRawSource(suContext, dbNode, predicate), factory);
+		return new IterableAdapter<>(template.getSource().getRawSource(suContext, getNode(), predicate), factory);
 	}
 
 	@Override
@@ -650,7 +643,7 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 		final SecurityContext suContext      = SecurityContext.getSuperUserInstance();
 		final RelationshipFactory<R> factory = new RelationshipFactory<>(suContext);
 		final R template                     = getRelationshipForType(type);
-		final Relationship relationship      = template.getTarget().getRawSource(suContext, dbNode, null);
+		final Relationship relationship      = template.getTarget().getRawSource(suContext, getNode(), null);
 
 		if (relationship != null) {
 			return factory.adapt(relationship);
@@ -666,17 +659,7 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 		final Direction direction            = template.getDirectionForType(entityType);
 		final RelationshipType relType       = template;
 
-		return new IterableAdapter<>(dbNode.getRelationships(direction, relType), factory);
-	}
-
-	/**
-	 * Return statistical information on all relationships of this node
-	 *
-	 * @param dir
-	 * @return number of relationships
-	 */
-	public final Map<String, Long> getRelationshipInfo(final Direction dir) throws FrameworkException {
-		return StructrApp.getInstance(securityContext).command(NodeRelationshipStatisticsCommand.class).execute(this, dir);
+		return new IterableAdapter<>(getNode().getRelationships(direction, relType), factory);
 	}
 
 	/**
@@ -686,15 +669,15 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 	 * @return the owner node of this node
 	 */
 	@Override
-	public final Principal getOwnerNode() {
+	public final PrincipalInterface getOwnerNode() {
 
 		if (cachedOwnerNode == null) {
 
 			final Ownership ownership = getIncomingRelationshipAsSuperUser(PrincipalOwnsNode.class);
 			if (ownership != null) {
 
-				Principal principal = ownership.getSourceNode();
-				cachedOwnerNode = (Principal) principal;
+				PrincipalInterface principal = ownership.getSourceNode();
+				cachedOwnerNode = (PrincipalInterface) principal;
 			}
 		}
 
@@ -729,12 +712,12 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 
 	@Override
 	public final <A extends NodeInterface, B extends NodeInterface, S extends Source, T extends Target, R extends Relation<A, B, S, T>> boolean hasIncomingRelationships(final Class<R> type) {
-		return getRelationshipForType(type).getSource().hasElements(securityContext, dbNode, null);
+		return AbstractNode.getRelationshipForType(type).getSource().hasElements(securityContext, getNode(), null);
 	}
 
 	@Override
 	public final <A extends NodeInterface, B extends NodeInterface, S extends Source, T extends Target, R extends Relation<A, B, S, T>> boolean hasOutgoingRelationships(final Class<R> type) {
-		return getRelationshipForType(type).getTarget().hasElements(securityContext, dbNode, null);
+		return AbstractNode.getRelationshipForType(type).getTarget().hasElements(securityContext, getNode(), null);
 	}
 
 	// ----- interface AccessControllable -----
@@ -750,7 +733,7 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 			return true;
 		}
 
-		Principal accessingUser = null;
+		PrincipalInterface accessingUser = null;
 		if (context != null) {
 
 			accessingUser = context.getUser(false);
@@ -771,11 +754,11 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 		return result;
 	}
 
-	private boolean isGranted(final Permission permission, final Principal accessingUser, final PermissionResolutionMask mask, final int level, final AlreadyTraversed alreadyTraversed, final boolean resolvePermissions, final boolean doLog, final boolean isCreation) {
+	private boolean isGranted(final Permission permission, final PrincipalInterface accessingUser, final PermissionResolutionMask mask, final int level, final AlreadyTraversed alreadyTraversed, final boolean resolvePermissions, final boolean doLog, final boolean isCreation) {
 		return isGranted(permission, accessingUser, mask, level, alreadyTraversed, resolvePermissions, doLog, null, isCreation);
 	}
 
-	private boolean isGranted(final Permission permission, final Principal accessingUser, final PermissionResolutionMask mask, final int level, final AlreadyTraversed alreadyTraversed, final boolean resolvePermissions, final boolean doLog, final Map<String, Security> incomingSecurityRelationships, final boolean isCreation) {
+	private boolean isGranted(final Permission permission, final PrincipalInterface accessingUser, final PermissionResolutionMask mask, final int level, final AlreadyTraversed alreadyTraversed, final boolean resolvePermissions, final boolean doLog, final Map<String, Security> incomingSecurityRelationships, final boolean isCreation) {
 
 		if (level > 300) {
 			logger.warn("Aborting recursive permission resolution for {} on {} because of recursion level > 300, this is quite likely an infinite loop.", permission.name(), getType() + "(" + getUuid() + ")");
@@ -783,12 +766,6 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 		}
 
 		if (doLog) { logger.info("{}{} ({}): {} check on level {} for {}", StringUtils.repeat("    ", level), getUuid(), getType(), permission.name(), level, accessingUser != null ? accessingUser.getName() : null); }
-
-		// use quick checks for maximum performance
-		if (isCreation && (accessingUser == null || accessingUser.equals(this) || accessingUser.equals(getOwnerNode()) ) ) {
-
-			return true;
-		}
 
 		if (accessingUser != null) {
 
@@ -805,26 +782,16 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 			}
 		}
 
-		// allow accessingUser to access itself, but not parents etc.
-		if (this.equals(accessingUser) && (level == 0 || (permission.equals(Permission.read) && level > 0))) {
+		final PrincipalInterface _owner = getOwnerNode();
+		final boolean hasOwner          = (_owner != null);
+
+		if (isCreation && (accessingUser == null || accessingUser.equals(this) || accessingUser.equals(_owner) ) ) {
 			return true;
 		}
 
-		// check owner
-		final Principal _owner = getOwnerNode();
-		final boolean hasOwner = (_owner != null);
-
-		// allow access for nodes without owner, but only on first level!
-		// (covered by ResourceAccess objects)
-		if (level == 0 && !hasOwner && Services.getPermissionsForOwnerlessNodes().contains(permission)) {
-
-			if (accessingUser != null && isVisibleToAuthenticatedUsers()) {
-				return true;
-			}
-
-			if (accessingUser == null && isVisibleToPublicUsers()) {
-				return true;
-			}
+		// allow accessingUser to access itself, but not parents etc.
+		if (this.equals(accessingUser) && (level == 0 || (permission.equals(Permission.read) && level > 0))) {
+			return true;
 		}
 
 		// node has an owner, deny anonymous access
@@ -847,41 +814,11 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 				return true;
 			}
 
-			// new experimental custom permission resultion based on query
-			final PropertyKey<String> permissionPropertyKey = StructrApp.getConfiguration().getPropertyKeyForJSONName(Principal.class, "customPermissionQuery" + StringUtils.capitalize(permission.name()));
-			final String customPermissionQuery              = accessingUser.getProperty(permissionPropertyKey);
+			for (PrincipalInterface parent : accessingUser.getParentsPrivileged()) {
 
-			if (StringUtils.isNotEmpty(customPermissionQuery)) {
-
-				final Map<String, Object> params = new HashMap<>();
-
-				params.put("principalUuid", accessingUser.getUuid());
-				params.put("principalId", accessingUser.getUuid());
-				params.put("principalType", accessingUser.getType());
-
-				params.put("targetNodeUuid", this.getUuid());
-				params.put("targetNodeType", this.getType());
-
-				boolean result = false;
-				try {
-
-					final DatabaseService db       = Services.getInstance().getDatabaseService();
-					final NativeQuery<Boolean> cpq = db.query(customPermissionQuery, Boolean.class);
-
-					cpq.configure(params);
-
-					result = db.execute(cpq);
-
-				} catch (final Exception ex) {
-					logger.error("Error in custom permission resolution", ex);
-				}
-
-				logger.info("CPQ (" + permission.name() + ") '" + customPermissionQuery + "': "+ result);
-
-				if (result) {
+				if (isGranted(permission, parent, mask, level+1, alreadyTraversed, false, doLog, localIncomingSecurityRelationships, isCreation)) {
 					return true;
 				}
-
 			}
 
 			// Check permissions from domain relationships
@@ -927,14 +864,6 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 				// do backtracking
 				backtrack(root, accessingUser.getUuid(), permission, false, 0, doLog);
 			}
-
-			// Last: recursively check possible parent principals
-			for (Principal parent : accessingUser.getParentsPrivileged()) {
-
-				if (isGranted(permission, parent, mask, level+1, alreadyTraversed, false, doLog, localIncomingSecurityRelationships, isCreation)) {
-					return true;
-				}
-			}
 		}
 
 		return false;
@@ -975,7 +904,7 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 	}
 
 
-	private boolean hasEffectivePermissions(final BFSInfo parent, final Principal principal, final Permission permission, final PermissionResolutionMask mask, final int level, final AlreadyTraversed alreadyTraversed, final Queue<BFSInfo> bfsNodes, final boolean doLog, final boolean isCreation) {
+	private boolean hasEffectivePermissions(final BFSInfo parent, final PrincipalInterface principal, final Permission permission, final PermissionResolutionMask mask, final int level, final AlreadyTraversed alreadyTraversed, final Queue<BFSInfo> bfsNodes, final boolean doLog, final boolean isCreation) {
 
 		// check nodes here to avoid circles in permission-propagating relationships
 		if (alreadyTraversed.contains("Node", getUuid())) {
@@ -984,53 +913,60 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 
 		if (doLog) { logger.info("{}{} ({}): checking {} access on level {} for {}", StringUtils.repeat("    ", level), getUuid(), getType(), permission.name(), level, principal != null ? principal.getName() : null); }
 
-		for (final Class<Relation> propagatingType : SchemaRelationshipNode.getPropagatingRelationshipTypes()) {
+		final Node node                = getNode();
+		final Map<String, Long> degree = node.getDegree();
 
-			// iterate over list of relationships
-			final List<Relation> list = Iterables.toList(getRelationshipsAsSuperUser(propagatingType));
-			final int count           = list.size();
-			final int threshold       = 1000;
+		for (final String type : degree.keySet()) {
 
-			if (count < threshold) {
+			final Class propagatingType = StructrApp.getConfiguration().getRelationshipEntityClass(type);
 
-				for (final Relation source : list) {
+			if (propagatingType != null && PermissionPropagation.class.isAssignableFrom(propagatingType)) {
 
-					if (source instanceof PermissionPropagation) {
+				// iterate over list of relationships
+				final List<Relation> list = Iterables.toList(getRelationshipsAsSuperUser(propagatingType));
+				final int count = list.size();
+				final int threshold = 1000;
 
-						final PermissionPropagation perm = (PermissionPropagation)source;
-						final RelationshipInterface rel  = (RelationshipInterface)source;
+				if (count < threshold) {
 
-						if (doLog) { logger.info("{}{}: checking {} access on level {} via {} for {}", StringUtils.repeat("    ", level), getUuid(), permission.name(), level, rel.getRelType().name(), principal != null ? principal.getName() : null); }
+					for (final Relation source : list) {
 
-						// check propagation direction vs. evaluation direction
-						if (propagationAllowed(this, rel, perm.getPropagationDirection(), doLog)) {
+						if (source instanceof PermissionPropagation perm) {
 
-							applyCurrentStep(perm, mask);
+							if (doLog) {
+								logger.info("{}{}: checking {} access on level {} via {} for {}", StringUtils.repeat("    ", level), getUuid(), permission.name(), level, source.getRelType().name(), principal != null ? principal.getName() : null);
+							}
 
-							if (mask.allowsPermission(permission)) {
+							// check propagation direction vs. evaluation direction
+							if (propagationAllowed(this, source, perm.getPropagationDirection(), doLog)) {
 
-								final AbstractNode otherNode = (AbstractNode)rel.getOtherNode(this);
+								applyCurrentStep(perm, mask);
 
-								if (otherNode.isGranted(permission, principal, mask, level + 1, alreadyTraversed, false, doLog, isCreation)) {
+								if (mask.allowsPermission(permission)) {
 
-									otherNode.storePermissionResolutionResult(principal.getUuid(), permission, true);
+									final AbstractNode otherNode = (AbstractNode) source.getOtherNode(this);
 
-									// break early
-									return true;
+									if (otherNode.isGranted(permission, principal, mask, level + 1, alreadyTraversed, false, doLog, isCreation)) {
 
-								} else {
+										otherNode.storePermissionResolutionResult(principal.getUuid(), permission, true);
 
-									// add node to BFS queue
-									bfsNodes.add(new BFSInfo(parent, otherNode));
+										// break early
+										return true;
+
+									} else {
+
+										// add node to BFS queue
+										bfsNodes.add(new BFSInfo(parent, otherNode));
+									}
 								}
 							}
 						}
 					}
+
+				} else if (doLog) {
+
+					logger.warn("Refusing to resolve permissions with {} because there are more than {} nodes.", propagatingType.getSimpleName(), threshold);
 				}
-
-			} else if (doLog) {
-
-				logger.warn("Refusing to resolve permissions with {} because there are more than {} nodes.", propagatingType.getSimpleName(), threshold);
 			}
 		}
 
@@ -1224,7 +1160,7 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 		}
 	}
 
-	private Security getSecurityRelationship(final Principal p, final Map<String, Security> securityRelationships) {
+	private Security getSecurityRelationship(final PrincipalInterface p, final Map<String, Security> securityRelationships) {
 
 		if (p == null) {
 
@@ -1242,7 +1178,7 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 	 * @return incoming security relationship
 	 */
 	@Override
-	public final Security getSecurityRelationship(final Principal p) {
+	public final Security getSecurityRelationship(final PrincipalInterface p) {
 
 		if (p != null) {
 
@@ -1386,16 +1322,7 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 				internalSystemPropertiesUnlocked = false;
 				readOnlyPropertiesUnlocked       = false;
 
-				final Principal currentUser = securityContext.getUser(false);
-				String user = null;
-
-				if (currentUser == null) {
-					user = securityContext.isSuperUser() ? "superuser" : "anonymous";
-				} else {
-					user = currentUser.getProperty(AbstractNode.id);
-				}
-
-				throw new FrameworkException(403, "Modification of node " + this.getProperty(AbstractNode.id) + " with type " + this.getProperty(AbstractNode.type) + " by user " + user + " not permitted.");
+				throw new FrameworkException(403, getModificationNotPermittedExceptionString(this, securityContext));
 			}
 		}
 
@@ -1432,16 +1359,7 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 			internalSystemPropertiesUnlocked = false;
 			readOnlyPropertiesUnlocked       = false;
 
-			final Principal currentUser = securityContext.getUser(false);
-			String user = null;
-
-			if (currentUser == null) {
-				user = securityContext.isSuperUser() ? "superuser" : "anonymous";
-			} else {
-				user = currentUser.getProperty(AbstractNode.id);
-			}
-
-			throw new FrameworkException(403, "Modification of node " + this.getProperty(AbstractNode.id) + " with type " + this.getProperty(AbstractNode.type) + " by user " + user + " not permitted.");
+			throw new FrameworkException(403, getModificationNotPermittedExceptionString(this, securityContext));
 		}
 
 		for (final PropertyKey key : properties.keySet()) {
@@ -1450,20 +1368,20 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 			final Object value    = properties.get(key);
 
 			// no old value exists  OR  old value exists and is NOT equal => set property
-			if (isCreation || ((oldValue == null) && (value != null)) || ((oldValue != null) && (!oldValue.equals(value)) || (key instanceof FunctionProperty)) ) {
+			if (isCreation || ((oldValue == null) && (value != null)) || ((oldValue != null) && (!Objects.deepEquals(oldValue, value)) || (key instanceof FunctionProperty)) ) {
 
 				if (!key.equals(GraphObject.id)) {
 
 					// check for system properties
 					if (key.isSystemInternal() && !internalSystemPropertiesUnlocked) {
 
-						throw new FrameworkException(422, "Property " + key.jsonName() + " is an internal system property", new InternalSystemPropertyToken(getClass().getSimpleName(), key));
+						throw new FrameworkException(422, "Property ‛" + key.jsonName() + "‛ is an internal system property", new InternalSystemPropertyToken(getClass().getSimpleName(), key.jsonName()));
 					}
 
 					// check for read-only properties
 					if ((key.isReadOnly() || key.isWriteOnce()) && !readOnlyPropertiesUnlocked && !securityContext.isSuperUser()) {
 
-						throw new FrameworkException(422, "Property " + key.jsonName() + " is read-only", new ReadOnlyPropertyToken(getClass().getSimpleName(), key));
+						throw new FrameworkException(422, "Property ‛" + key.jsonName() + "‛ is read-only", new ReadOnlyPropertyToken(getClass().getSimpleName(), key.jsonName()));
 					}
 				}
 			}
@@ -1478,7 +1396,7 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 
 			logger.error("Tried to set property with null key (action was denied)");
 
-			throw new FrameworkException(422, "Tried to set property with null key (action was denied)", new NullArgumentToken(getClass().getSimpleName(), base));
+			throw new FrameworkException(422, "Tried to set property with null key (action was denied)", new NullArgumentToken(getClass().getSimpleName(), base.jsonName()));
 
 		}
 
@@ -1487,13 +1405,13 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 			// check for system properties
 			if (key.isSystemInternal() && !internalSystemPropertiesUnlocked) {
 
-				throw new FrameworkException(422, "Property " + key.jsonName() + " is an internal system property", new InternalSystemPropertyToken(getClass().getSimpleName(), key));
+				throw new FrameworkException(422, "Property ‛" + key.jsonName() + "‛ is an internal system property", new InternalSystemPropertyToken(getClass().getSimpleName(), key.jsonName()));
 			}
 
 			// check for read-only properties
 			if ((key.isReadOnly() || key.isWriteOnce()) && !readOnlyPropertiesUnlocked && !securityContext.isSuperUser()) {
 
-				throw new FrameworkException(422, "Property " + key.jsonName() + " is read-only", new ReadOnlyPropertyToken(getClass().getSimpleName(), key));
+				throw new FrameworkException(422, "Property ‛" + key.jsonName() + "‛ is read-only", new ReadOnlyPropertyToken(getClass().getSimpleName(), key.jsonName()));
 			}
 
 			return key.setProperty(securityContext, this, value);
@@ -1524,7 +1442,7 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 
 			try {
 
-				instance = type.newInstance();
+				instance = type.getDeclaredConstructor().newInstance();
 				relationshipTemplateInstanceCache.put(type.getName(), instance);
 
 			} catch (Throwable t) {
@@ -1603,36 +1521,18 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 					}
 				}
 
-				final ContextStore contextStore      = actionContext.getContextStore();
-				final Map<String, Object> parameters = contextStore.getTemporaryParameters();
+				final AbstractMethod method = Methods.resolveMethod(entityType, key);
+				if (method != null) {
 
-				final Object value = invokeMethod(actionContext.getSecurityContext(), key, parameters, false, hints);
-				if (value != null) {
+					final ContextStore contextStore = actionContext.getContextStore();
+					final Map<String, Object> temp  = contextStore.getTemporaryParameters();
+					final Arguments arguments       = Arguments.fromMap(temp);
 
-					return value;
+					return method.execute(actionContext.getSecurityContext(), this, arguments, hints);
 				}
 
 				return Function.numberOrString(defaultValue);
 		}
-	}
-
-	@Override
-	public final Object invokeMethod(final SecurityContext securityContext, final String methodName, final Map<String, Object> propertySet, final boolean throwExceptionForUnknownMethods, final EvaluationHints hints) throws FrameworkException {
-
-		final Method method = StructrApp.getConfiguration().getExportedMethodsForType(entityType).get(methodName);
-		if (method != null) {
-
-			hints.reportExistingKey(methodName);
-
-			return AbstractNode.invokeMethod(securityContext, method, this, propertySet, hints);
-		}
-
-		// in the case of REST access we want to know if the method exists or not
-		if (throwExceptionForUnknownMethods) {
-			throw new FrameworkException(400, "Method " + methodName + " not found in type " + getType());
-		}
-
-		return null;
 	}
 
 	private Map<String, Security> mapSecurityRelationshipsMapped(final Iterable<Security> src) {
@@ -1648,20 +1548,20 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 	}
 
 	@Override
-	public final void grant(Permission permission, Principal principal) throws FrameworkException {
+	public final void grant(Permission permission, PrincipalInterface principal) throws FrameworkException {
 		grant(Collections.singleton(permission), principal, securityContext);
 	}
 
 	@Override
-	public final void grant(final Set<Permission> permissions, Principal principal) throws FrameworkException {
+	public final void grant(final Set<Permission> permissions, PrincipalInterface principal) throws FrameworkException {
 		grant(permissions, principal, securityContext);
 	}
 
 	@Override
-	public final void grant(final Set<Permission> permissions, Principal principal, SecurityContext ctx) throws FrameworkException {
+	public final void grant(final Set<Permission> permissions, PrincipalInterface principal, SecurityContext ctx) throws FrameworkException {
 
 		if (!isGranted(Permission.accessControl, ctx)) {
-			throw new FrameworkException(403, "Access control not permitted");
+			throw new FrameworkException(403, getAccessControlNotPermittedExceptionString("grant", permissions, principal, ctx));
 		}
 
 		clearCaches();
@@ -1703,20 +1603,20 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 	}
 
 	@Override
-	public final void revoke(Permission permission, Principal principal) throws FrameworkException {
+	public final void revoke(Permission permission, PrincipalInterface principal) throws FrameworkException {
 		revoke(Collections.singleton(permission), principal, securityContext);
 	}
 
 	@Override
-	public final void revoke(final Set<Permission> permissions, Principal principal) throws FrameworkException {
+	public final void revoke(final Set<Permission> permissions, PrincipalInterface principal) throws FrameworkException {
 		revoke(permissions, principal, securityContext);
 	}
 
 	@Override
-	public final void revoke(Set<Permission> permissions, Principal principal, SecurityContext ctx) throws FrameworkException {
+	public final void revoke(Set<Permission> permissions, PrincipalInterface principal, SecurityContext ctx) throws FrameworkException {
 
 		if (!isGranted(Permission.accessControl, ctx)) {
-			throw new FrameworkException(403, "Access control not permitted");
+			throw new FrameworkException(403, getAccessControlNotPermittedExceptionString("revoke", permissions, principal, ctx));
 		}
 
 		clearCaches();
@@ -1730,15 +1630,15 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 
 
 	@Override
-	public final void setAllowed(Set<Permission> permissions, Principal principal) throws FrameworkException {
+	public final void setAllowed(Set<Permission> permissions, PrincipalInterface principal) throws FrameworkException {
 		setAllowed(permissions, principal, securityContext);
 	}
 
 	@Override
-	public final void setAllowed(Set<Permission> permissions, Principal principal, SecurityContext ctx) throws FrameworkException {
+	public final void setAllowed(Set<Permission> permissions, PrincipalInterface principal, SecurityContext ctx) throws FrameworkException {
 
 		if (!isGranted(Permission.accessControl, ctx)) {
-			throw new FrameworkException(403, "Access control not permitted");
+			throw new FrameworkException(403, getAccessControlNotPermittedExceptionString("set", permissions, principal, ctx));
 		}
 
 		clearCaches();
@@ -1753,11 +1653,11 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 		Security secRel = getSecurityRelationship(principal);
 		if (secRel == null) {
 
-			if (permissions.size() > 0) {
+			if (!permissions.isEmpty()) {
 
 				try {
 
-					// ensureCardinality is not neccessary here
+					// ensureCardinality is not necessary here
 					final SecurityContext superUserContext = SecurityContext.getSuperUserInstance();
 					final PropertyMap properties           = new PropertyMap();
 					superUserContext.disablePreventDuplicateRelationships();
@@ -1786,17 +1686,36 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 		this.rawPathSegmentId = rawPathSegmentId;
 	}
 
-	public final void revokeAll() throws FrameworkException {
+	private static String getCurrentUserString (final SecurityContext ctx) {
 
-		if (!isGranted(Permission.accessControl, securityContext)) {
-			throw new FrameworkException(403, "Access control not permitted");
+		final PrincipalInterface currentUser = ctx.getUser(false);
+		String userString = "";
+
+		if (currentUser == null) {
+			userString = (ctx.isSuperUser() ? "superuser" : "anonymous");
+		} else {
+			userString = currentUser.getProperty(AbstractNode.type) + "(" + currentUser.getProperty(AbstractNode.id) + ")";
 		}
 
-		final App app = StructrApp.getInstance();
+		return userString;
+	}
 
-		for (final Security security : getIncomingRelationshipsAsSuperUser(Security.class)) {
-			app.delete(security);
-		}
+	private String getAccessControlNotPermittedExceptionString(final String action, final Set<Permission> permissions, PrincipalInterface principal, final SecurityContext ctx) {
+
+		final String userString       = getCurrentUserString(ctx);
+		final String thisNodeString   = this.getProperty(AbstractNode.type)      + "(" + this.getProperty(AbstractNode.id)      + ")";
+		final String principalString  = principal.getProperty(AbstractNode.type) + "(" + principal.getProperty(AbstractNode.id) + ")";
+		final String permissionString = permissions.stream().map(p -> p.name()).collect(Collectors.joining(", "));
+
+		return "Access control not permitted! " + userString + " can not " + action + " rights (" + permissionString + ") for " + principalString + " to node " + thisNodeString;
+	}
+
+	public static String getModificationNotPermittedExceptionString(final GraphObject obj, final SecurityContext ctx) {
+
+		final String userString     = getCurrentUserString(ctx);
+		final String thisNodeString = obj.getProperty(AbstractNode.type) + "(" + obj.getProperty(AbstractNode.id)      + ")";
+
+		return "Modification of node " + thisNodeString + " by " + userString + "not permitted.";
 	}
 
 	@Override
@@ -1807,8 +1726,8 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 		// sort list by principal name (important for diff'able export)
 		Collections.sort(grants, (o1, o2) -> {
 
-			final Principal p1 = o1.getSourceNode();
-			final Principal p2 = o2.getSourceNode();
+			final PrincipalInterface p1 = o1.getSourceNode();
+			final PrincipalInterface p2 = o2.getSourceNode();
 			final String n1    = p1 != null ? p1.getProperty(AbstractNode.name) : "empty";
 			final String n2    = p2 != null ? p2.getProperty(AbstractNode.name) : "empty";
 
@@ -1883,152 +1802,8 @@ public abstract class AbstractNode implements NodeInterface, AccessControllable 
 		return false;
 	}
 
-	protected boolean allowedBySchema(final Principal principal, final Permission permission) {
+	protected boolean allowedBySchema(final PrincipalInterface principal, final Permission permission) {
 		return false;
-	}
-
-	// ----- static methods -----
-	public static Object invokeMethod(final SecurityContext securityContext, final Method method, final Object entity, final Map<String, Object> propertySet, final EvaluationHints hints) throws FrameworkException {
-
-		try {
-
-			// new structure: first parameter is always securityContext and second parameter can be Map (for dynamically defined methods)
-			if (method.getParameterTypes().length == 2 && method.getParameterTypes()[0].isAssignableFrom(SecurityContext.class) && method.getParameterTypes()[1].equals(Map.class)) {
-				final Object[] args = new Object[] { securityContext };
-				return method.invoke(entity, ArrayUtils.add(args, propertySet));
-			}
-
-			// second try: extracted parameter list
-			final Object[] args = extractParameters(propertySet, method.getParameterTypes());
-
-			return method.invoke(entity, ArrayUtils.add(args, 0, securityContext));
-
-		} catch (InvocationTargetException itex) {
-
-			final Throwable cause = itex.getCause();
-
-			if (cause instanceof AssertException) {
-
-				final AssertException e = (AssertException)cause;
-				throw new FrameworkException(e.getStatus(), e.getMessage());
-			}
-
-			if (cause instanceof FrameworkException) {
-
-				throw (FrameworkException) cause;
-			}
-
-		} catch (IllegalAccessException | IllegalArgumentException  t) {
-
-			logger.warn("Unable to invoke method {}: {}", method.getName(), t.getMessage());
-		}
-
-		return null;
-	}
-
-	private static Object[] extractParameters(Map<String, Object> properties, Class[] parameterTypes) {
-
-		final List<Object> values = new ArrayList<>(properties.values());
-		final List<Object> parameters = new ArrayList<>();
-		int index = 0;
-
-		// only try to convert when both lists have equal size
-		// subtract one because securityContext is default and not provided by user
-		if (values.size() == (parameterTypes.length - 1)) {
-
-			for (final Class parameterType : parameterTypes) {
-
-				// skip securityContext
-				if (!parameterType.isAssignableFrom(SecurityContext.class)) {
-
-					final Object value = convert(values.get(index++), parameterType);
-					if (value != null) {
-
-						parameters.add(value);
-					}
-				}
-			}
-		}
-
-		return parameters.toArray(new Object[0]);
-	}
-
-	/*
-	 * Tries to convert the given value into an object
-	 * of the given type, using an intermediate type
-	 * of String for the conversion.
-	 */
-	private static Object convert(Object value, Class type) {
-
-		// short-circuit
-		if (type.isAssignableFrom(value.getClass())) {
-			return value;
-		}
-
-		Object convertedObject = null;
-
-		if (type.equals(String.class)) {
-
-			// strings can be returned immediately
-			return value.toString();
-
-		} else if (value instanceof Number) {
-
-			Number number = (Number) value;
-
-			if (type.equals(Integer.class) || type.equals(Integer.TYPE)) {
-				return number.intValue();
-
-			} else if (type.equals(Long.class) || type.equals(Long.TYPE)) {
-				return number.longValue();
-
-			} else if (type.equals(Double.class) || type.equals(Double.TYPE)) {
-				return number.doubleValue();
-
-			} else if (type.equals(Float.class) || type.equals(Float.TYPE)) {
-				return number.floatValue();
-
-			} else if (type.equals(Short.class) || type.equals(Integer.TYPE)) {
-				return number.shortValue();
-
-			} else if (type.equals(Byte.class) || type.equals(Byte.TYPE)) {
-				return number.byteValue();
-
-			}
-
-		} else if (value instanceof List) {
-
-			return value;
-
-		} else if (value instanceof Map) {
-
-			return value;
-
-		} else if (value instanceof Boolean) {
-
-			return value;
-
-		}
-
-		// fallback
-		try {
-
-			Method valueOf = type.getMethod("valueOf", String.class);
-			if (valueOf != null) {
-
-				convertedObject = valueOf.invoke(null, value.toString());
-
-			} else {
-
-				logger.warn("Unable to find static valueOf method for type {}", type);
-			}
-
-		} catch (Throwable t) {
-
-			logger.warn("Unable to deserialize value {} of type {}, Class has no static valueOf method.", new Object[]{value, type});
-		}
-
-		return convertedObject;
 	}
 
 	// ----- nested classes -----
