@@ -30,11 +30,10 @@ import org.structr.api.service.DatabaseConnection;
 import org.structr.api.service.ServiceResult;
 import org.structr.common.error.*;
 import org.structr.core.Services;
-import org.structr.core.entity.AbstractNode;
 import org.structr.core.function.Functions;
-import org.structr.core.property.GenericProperty;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.*;
 
 import static org.structr.api.service.DatabaseConnection.*;
@@ -261,7 +260,7 @@ public class ManageDatabasesCommand extends NodeServiceCommand implements Mainte
 
 		} else {
 
-			throw new FrameworkException(422, "Please supply the name of the connection to remove.", new EmptyPropertyToken("Connection", AbstractNode.name));
+			throw new FrameworkException(422, "Please supply the name of the connection to remove.", new EmptyPropertyToken("Connection", "name"));
 		}
 	}
 
@@ -347,7 +346,7 @@ public class ManageDatabasesCommand extends NodeServiceCommand implements Mainte
 		final ErrorBuffer errorBuffer = new ErrorBuffer();
 
 		if (StringUtils.isEmpty((String)data.get(KEY_NAME))) {
-			errorBuffer.add(new EmptyPropertyToken("Connection", new GenericProperty("name")));
+			errorBuffer.add(new EmptyPropertyToken("Connection", "name"));
 		}
 
 		final String name    = (String)data.get(KEY_NAME);
@@ -358,13 +357,13 @@ public class ManageDatabasesCommand extends NodeServiceCommand implements Mainte
 
 		// connection cannot be named "default"
 		if ("default".equals((String) data.get(KEY_NAME))) {
-			errorBuffer.add(new UniqueToken("Connection", new GenericProperty("name"), "default"));
+			errorBuffer.add(new UniqueToken("Connection", "name", "default", null, null));
 		}
 
 		if (!nameOnly) {
 
 			if (StringUtils.isEmpty((String) data.get(KEY_URL))) {
-				errorBuffer.add(new EmptyPropertyToken("Connection", new GenericProperty("url")));
+				errorBuffer.add(new EmptyPropertyToken("Connection", "url"));
 			}
 
 			try {
@@ -374,33 +373,33 @@ public class ManageDatabasesCommand extends NodeServiceCommand implements Mainte
 
 				if (driverClassString != null) {
 
-					databaseService = (DatabaseService) Class.forName((String) driverClassString).newInstance();
+					databaseService = (DatabaseService) Class.forName((String) driverClassString).getDeclaredConstructor().newInstance();
 
 				} else {
 
-					databaseService = (DatabaseService) Class.forName("org.structr.bolt.BoltDatabaseService").newInstance();
+					databaseService = (DatabaseService) Class.forName("org.structr.bolt.BoltDatabaseService").getDeclaredConstructor().newInstance();
 				}
 
 				if (databaseService == null) {
 
-					errorBuffer.add(new SemanticErrorToken("Driver", new GenericProperty("driver"), "driver_not_found"));
+					errorBuffer.add(new SemanticErrorToken("Driver", "driver", "driver_not_found"));
 
 				} else {
 
 					if (databaseService.supportsFeature(DatabaseFeature.AuthenticationRequired)) {
 
 						if (StringUtils.isEmpty((String) data.get(KEY_USERNAME))) {
-							errorBuffer.add(new EmptyPropertyToken("Connection", new GenericProperty("username")));
+							errorBuffer.add(new EmptyPropertyToken("Connection", "username"));
 						}
 
 						if (StringUtils.isEmpty((String) data.get(KEY_PASSWORD))) {
-							errorBuffer.add(new EmptyPropertyToken("Connection", new GenericProperty("password")));
+							errorBuffer.add(new EmptyPropertyToken("Connection", "password"));
 						}
 					}
 				}
 
-			} catch (ClassNotFoundException|InstantiationException|IllegalAccessException ex) {
-				errorBuffer.add(new SemanticErrorToken("Driver", new GenericProperty("driver"), "driver_error"));
+			} catch (ClassNotFoundException|InstantiationException|IllegalAccessException | NoSuchMethodException | SecurityException | IllegalArgumentException | InvocationTargetException ex) {
+				errorBuffer.add(new SemanticErrorToken("Driver", "driver", "driver_error"));
 			}
 		}
 
