@@ -35,7 +35,6 @@ import org.structr.api.util.CountResult;
 import org.structr.core.Services;
 import org.structr.core.app.App;
 import org.structr.core.app.StructrApp;
-import org.structr.core.property.PropertyKey;
 
 import java.io.File;
 
@@ -51,7 +50,6 @@ public class NodeService implements SingletonService {
 	private Index<Relationship> relIndex    = null;
 	private String filesPath                = null;
 	private boolean isInitialized           = false;
-	private CountResult initialCount        = null;
 
 	@Override
 	public void injectArguments(Command command) {
@@ -66,14 +64,14 @@ public class NodeService implements SingletonService {
 	}
 
 	@Override
-	public ServiceResult initialize(final StructrServices services, String serviceName) throws ClassNotFoundException, InstantiationException, IllegalAccessException {
+	public ServiceResult initialize(final StructrServices services, String serviceName) throws ReflectiveOperationException {
 
 		this.servicesParent = services;
 
 		final String databaseDriver = Settings.DatabaseDriver.getPrefixedValue(serviceName);
 		String errorMessage         = null;
 
-		databaseService = (DatabaseService)Class.forName(databaseDriver).newInstance();
+		databaseService = (DatabaseService)Class.forName(databaseDriver).getDeclaredConstructor().newInstance();
 		if (databaseService != null) {
 
 			if (databaseService.initialize(serviceName, services.getVersion(), services.getInstanceName())) {
@@ -194,19 +192,19 @@ public class NodeService implements SingletonService {
 
 	public CountResult getInitialCounts() {
 
-		if (initialCount == null) {
+		try (final Tx tx = StructrApp.getInstance().tx()) {
 
-			try (final Tx tx = StructrApp.getInstance().tx()) {
+			final CountResult result = databaseService.getNodeAndRelationshipCount();
 
-				initialCount = databaseService.getNodeAndRelationshipCount();
-				tx.success();
+			tx.success();
 
-			} catch (Throwable t) {
-				logger.warn("Unable to count number of nodes and relationships: {}", t.getMessage());
-			}
+			return result;
+
+		} catch (Throwable t) {
+			logger.warn("Unable to count number of nodes and relationships: {}", t.getMessage());
 		}
 
-		return initialCount;
+		return null;
 	}
 
 	public CountResult getCurrentCounts() {
@@ -215,18 +213,18 @@ public class NodeService implements SingletonService {
 
 	public void createAdminUser() {
 
-		if (Boolean.TRUE.equals(Settings.InitialAdminUserCreate.getValue())) {
+		if (!Services.isTesting() && servicesParent.hasExclusiveDatabaseAccess()) {
 
-			if (!Services.isTesting() && servicesParent.hasExclusiveDatabaseAccess()) {
+			// do two very quick count queries to determine the number of Structr nodes in the database
+			final CountResult count           = getInitialCounts();
+			final long nodeCount              = count.getNodeCount();
+			final boolean hasApplicationNodes = nodeCount > 0;
 
-				// do two very quick count queries to determine the number of Structr nodes in the database
-				final CountResult count           = getInitialCounts();
-				final long nodeCount              = count.getNodeCount();
-				final boolean hasApplicationNodes = nodeCount > 0;
+			if (!hasApplicationNodes) {
 
-				if (!hasApplicationNodes) {
+				if (Boolean.TRUE.equals(Settings.InitialAdminUserCreate.getValue())) {
 
-					logger.info("Creating initial user..");
+					logger.info("Creating initial user...");
 
 					final Class userType = StructrApp.getConfiguration().getNodeEntityClass("User");
 					if (userType != null) {
@@ -236,9 +234,9 @@ public class NodeService implements SingletonService {
 						try (final Tx tx = app.tx()) {
 
 							app.create(userType,
-								new NodeAttribute<>(StructrApp.key(userType, "name"),     Settings.InitialAdminUserName.getValue()),
-								new NodeAttribute<>(StructrApp.key(userType, "password"), Settings.InitialAdminUserPassword.getValue()),
-								new NodeAttribute<>(StructrApp.key(userType, "isAdmin"),  true)
+									new NodeAttribute<>(StructrApp.key(userType, "name"),     Settings.InitialAdminUserName.getValue()),
+									new NodeAttribute<>(StructrApp.key(userType, "password"), Settings.InitialAdminUserPassword.getValue()),
+									new NodeAttribute<>(StructrApp.key(userType, "isAdmin"),  true)
 							);
 
 							tx.success();
@@ -248,12 +246,12 @@ public class NodeService implements SingletonService {
 							logger.warn("Unable to create initial user: {}", t.getMessage());
 						}
 					}
+
+				} else {
+
+					logger.info("Not creating initial user, as per configuration");
 				}
 			}
-
-		} else {
-
-			logger.info("Not creating initial user, as per configuration");
 		}
 	}
 
