@@ -31,7 +31,7 @@ import org.structr.core.GraphObject;
 import org.structr.core.converter.PropertyConverter;
 import org.structr.core.entity.AbstractNode;
 import org.structr.core.entity.AbstractRelationship;
-import org.structr.core.entity.Principal;
+import org.structr.core.entity.PrincipalInterface;
 import org.structr.core.entity.SuperUser;
 import org.structr.core.graph.CreationContainer;
 import org.structr.core.graph.TransactionCommand;
@@ -309,7 +309,7 @@ public abstract class AbstractPrimitiveProperty<T> extends Property<T> {
 
 			if (securityContext.modifyAccessTime()) {
 
-				final Principal user = securityContext.getUser(false);
+				final PrincipalInterface user = securityContext.getUser(false);
 				String modifiedById  = null;
 
 				if (user != null) {
@@ -317,7 +317,7 @@ public abstract class AbstractPrimitiveProperty<T> extends Property<T> {
 					if (user instanceof SuperUser) {
 
 						// "virtual" UUID of superuser
-						modifiedById = Principal.SUPERUSER_ID;
+						modifiedById = PrincipalInterface.SUPERUSER_ID;
 
 					} else {
 
@@ -342,7 +342,9 @@ public abstract class AbstractPrimitiveProperty<T> extends Property<T> {
 
 		try {
 
-			return (Transformer)Class.forName(fqcn).newInstance();
+			final Class clazz = Class.forName(fqcn);
+
+			return (Transformer)clazz.getConstructor().newInstance();
 
 		} catch (Throwable t) {
 		}
