@@ -55,7 +55,6 @@ import org.slf4j.LoggerFactory;
 import org.structr.api.config.Settings;
 import org.structr.api.service.*;
 import org.structr.core.Services;
-import org.structr.rest.ResourceProvider;
 import org.structr.rest.auth.SessionHelper;
 import org.structr.rest.common.MetricsFilter;
 import org.structr.rest.common.Stats;
@@ -66,6 +65,7 @@ import org.structr.schema.SchemaService;
 import java.io.File;
 import java.io.IOException;
 import java.io.OutputStream;
+import java.lang.reflect.InvocationTargetException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -80,23 +80,20 @@ public class HttpService implements RunnableService, StatsCallback {
 
 	private static final Logger logger = LoggerFactory.getLogger(HttpService.class.getName());
 
-	// set of resource providers for this service
-	private final Set<ResourceProvider> resourceProviders = new LinkedHashSet<>();
-
 	private enum LifecycleEvent {
 		Started, Stopped
 	}
 
-	private Map<String, Map<String, Stats>> stats = new LinkedHashMap<>();
-	private DefaultSessionCache sessionCache      = null;
-	private GzipHandler gzipHandler               = null;
-	private HttpConfiguration httpConfig          = null;
-	private HttpConfiguration httpsConfig         = null;
-	private SslContextFactory.Server sslContextFactory = null;
-	private Server server                         = null;
-	private Server maintenanceServer              = null;
-	private int requestHeaderSize                 = 8192;
-	private boolean httpsActive                   = false;
+	private final Map<String, Map<String, Stats>> stats = new LinkedHashMap<>();
+	private SslContextFactory.Server sslContextFactory  = null;
+	private DefaultSessionCache sessionCache            = null;
+	private GzipHandler gzipHandler                     = null;
+	private HttpConfiguration httpConfig                = null;
+	private HttpConfiguration httpsConfig               = null;
+	private Server server                               = null;
+	private Server maintenanceServer                    = null;
+	private int requestHeaderSize                       = 8192;
+	private boolean httpsActive                         = false;
 
 	static {
 
@@ -213,7 +210,7 @@ public class HttpService implements RunnableService, StatsCallback {
 	}
 
 	@Override
-	public ServiceResult initialize(final StructrServices services, String serviceName) throws ClassNotFoundException, IllegalAccessException, InstantiationException {
+	public ServiceResult initialize(final StructrServices services, String serviceName) throws ReflectiveOperationException {
 
 		final LicenseManager licenseManager = services.getLicenseManager();
 		final boolean isTest                = Services.isTesting();
@@ -796,10 +793,6 @@ public class HttpService implements RunnableService, StatsCallback {
 		return "rest";
 	}
 
-	public Set<ResourceProvider> getResourceProviders() {
-		return resourceProviders;
-	}
-
 	public SessionCache getSessionCache() {
 		return sessionCache;
 	}
@@ -880,7 +873,7 @@ public class HttpService implements RunnableService, StatsCallback {
 
 							try {
 
-								final HttpServlet servlet = (HttpServlet)Class.forName(servletClassName).newInstance();
+								final HttpServlet servlet = (HttpServlet)Class.forName(servletClassName).getDeclaredConstructor().newInstance();
 								if (servlet instanceof HttpServiceServlet) {
 
 									final HttpServiceServlet httpServiceServlet = (HttpServiceServlet)servlet;
@@ -891,7 +884,7 @@ public class HttpService implements RunnableService, StatsCallback {
 										final StructrHttpServiceConfig cfg = httpServiceServlet.getConfig();
 										if (cfg != null) {
 
-											cfg.initializeFromSettings(servletName, resourceProviders);
+											cfg.initializeFromSettings(servletName);
 										}
 
 										final ServletHolder servletHolder = new ServletHolder(servlet);
@@ -911,8 +904,7 @@ public class HttpService implements RunnableService, StatsCallback {
 									}
 								}
 
-							} catch (ClassNotFoundException nfex) {
-
+							} catch (ClassNotFoundException | NoSuchMethodException | SecurityException | IllegalArgumentException | InvocationTargetException nfex) {
 								logger.warn("Unable to instantiate servlet class {} for servlet {}", servletClassName, servletName);
 							}
 
@@ -971,7 +963,7 @@ public class HttpService implements RunnableService, StatsCallback {
 				if (StringUtils.isNotBlank(listenerClass)) {
 
 					try {
-						final HttpServiceLifecycleListener listener = (HttpServiceLifecycleListener) Class.forName(listenerClass).newInstance();
+						final HttpServiceLifecycleListener listener = (HttpServiceLifecycleListener) Class.forName(listenerClass).getDeclaredConstructor().newInstance();
 						switch (event) {
 
 							case Started:
@@ -983,8 +975,7 @@ public class HttpService implements RunnableService, StatsCallback {
 								break;
 						}
 
-					} catch (InstantiationException | IllegalAccessException | ClassNotFoundException ex) {
-
+					} catch (InstantiationException | IllegalAccessException | ClassNotFoundException | NoSuchMethodException | SecurityException | IllegalArgumentException | InvocationTargetException ex) {
 						logger.error("Unable to send lifecycle event to listener " + listenerClass, ex);
 					}
 				}
