@@ -24,7 +24,7 @@ import jakarta.servlet.ServletOutputStream;
 import jakarta.servlet.WriteListener;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-import org.apache.commons.collections.CollectionUtils;
+import jakarta.servlet.http.HttpSession;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.exception.ExceptionUtils;
@@ -36,26 +36,31 @@ import org.slf4j.LoggerFactory;
 import org.structr.api.config.Settings;
 import org.structr.api.util.Iterables;
 import org.structr.common.AccessMode;
-import org.structr.common.PathHelper;
 import org.structr.common.SecurityContext;
 import org.structr.common.error.FrameworkException;
 import org.structr.common.event.RuntimeEventLog;
+import org.structr.common.helper.PathHelper;
 import org.structr.core.GraphObject;
 import org.structr.core.Services;
+import org.structr.core.api.AbstractMethod;
+import org.structr.core.api.Arguments;
+import org.structr.core.api.Methods;
 import org.structr.core.app.App;
 import org.structr.core.app.Query;
 import org.structr.core.app.StructrApp;
 import org.structr.core.auth.Authenticator;
 import org.structr.core.auth.exception.AuthenticationException;
+import org.structr.core.auth.exception.OAuthException;
 import org.structr.core.converter.PropertyConverter;
 import org.structr.core.entity.AbstractNode;
-import org.structr.core.entity.Principal;
+import org.structr.core.entity.PrincipalInterface;
 import org.structr.core.graph.NodeInterface;
 import org.structr.core.graph.Tx;
+import org.structr.core.property.Property;
 import org.structr.core.property.PropertyKey;
 import org.structr.core.property.PropertyMap;
+import org.structr.core.property.StringProperty;
 import org.structr.core.script.Scripting;
-import org.structr.storage.StorageProviderFactory;
 import org.structr.rest.auth.AuthHelper;
 import org.structr.rest.service.HttpServiceServlet;
 import org.structr.rest.service.StructrHttpServiceConfig;
@@ -63,13 +68,18 @@ import org.structr.rest.servlet.AbstractServletBase;
 import org.structr.schema.ConfigurationProvider;
 import org.structr.schema.action.ActionContext;
 import org.structr.schema.action.EvaluationHints;
+import org.structr.storage.StorageProviderFactory;
 import org.structr.util.Base64;
 import org.structr.web.auth.UiAuthenticator;
 import org.structr.web.common.FileHelper;
+import org.structr.web.common.PagePaths;
 import org.structr.web.common.RenderContext;
 import org.structr.web.common.RenderContext.EditMode;
 import org.structr.web.common.StringRenderBuffer;
-import org.structr.web.entity.*;
+import org.structr.web.entity.File;
+import org.structr.web.entity.Linkable;
+import org.structr.web.entity.Site;
+import org.structr.web.entity.User;
 import org.structr.web.entity.dom.DOMElement;
 import org.structr.web.entity.dom.DOMNode;
 import org.structr.web.entity.dom.Page;
@@ -82,6 +92,7 @@ import java.text.DateFormat;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.atomic.AtomicBoolean;
@@ -93,11 +104,11 @@ import java.util.regex.Pattern;
  */
 public class HtmlServlet extends AbstractServletBase implements HttpServiceServlet {
 
-	private static final Logger logger = LoggerFactory.getLogger(HtmlServlet.class.getName());
+	private static final Logger logger                             = LoggerFactory.getLogger(HtmlServlet.class.getName());
+	private static final Property<String> pathPropertyForSearch    = new StringProperty("path").indexed();
 
 	public static final String CONFIRM_REGISTRATION_PAGE = "/confirm_registration";
 	public static final String RESET_PASSWORD_PAGE       = "/reset-password";
-	public static final String POSSIBLE_ENTRY_POINTS_KEY = "possibleEntryPoints";
 	public static final String DOWNLOAD_AS_FILENAME_KEY  = "filename";
 	public static final String RANGE_KEY                 = "range";
 	public static final String DOWNLOAD_AS_DATA_URL_KEY  = "as-data-url";
@@ -142,9 +153,9 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 	@Override
 	protected void doGet(final HttpServletRequest request, final HttpServletResponse response) {
 
-		final long t0                   = System.currentTimeMillis();
-		final Authenticator auth        = getConfig().getAuthenticator();
-		boolean requestUriContainsUuids = false;
+		final long t0                                   = System.currentTimeMillis();
+		final Authenticator auth                        = getConfig().getAuthenticator();
+		boolean requestUriContainsUuids                 = false;
 
 		SecurityContext securityContext;
 		final App app;
@@ -154,6 +165,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			assertInitialized();
 
 			final String path = request.getPathInfo() != null ? request.getPathInfo() : "/";
+			final String cacheKey = request.getRequestURL().toString();
 
 			// check for registration (has its own tx because of write access
 			if (checkRegistration(auth, request, response, path)) {
@@ -170,6 +182,8 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			// isolate request authentication in a transaction
 			try (final Tx tx = StructrApp.getInstance().tx()) {
 
+				tx.prefetchHint("HTTP GET auth " + path);
+
 				securityContext = auth.initializeAndExamineRequest(request, response);
 				tx.success();
 
@@ -177,11 +191,24 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 				response.sendError(HttpServletResponse.SC_UNAUTHORIZED);
 				return;
+
+			} catch (final OAuthException oae) {
+
+				response.setStatus(oae.getStatus());
+
+				securityContext = SecurityContext.getInstance(null, request, AccessMode.Frontend);
+
+				if (!oae.isSilent()) {
+
+					logger.error("{}", oae.getMessage());
+				}
 			}
 
 			app = StructrApp.getInstance(securityContext);
 
 			try (final Tx tx = app.tx()) {
+
+				tx.prefetchHint("HTTP GET " + path);
 
 				// Ensure access mode is frontend
 				securityContext.setAccessMode(AccessMode.Frontend);
@@ -202,87 +229,110 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 					return;
 				}
 
-				final Principal user = securityContext.getUser(false);
+				final PrincipalInterface user = securityContext.getUser(false);
 				if (user != null) {
 
 					// Don't cache if a user is logged in
 					dontCache = true;
-
 				}
 
 				RuntimeEventLog.http(path, user);
 
 				final RenderContext renderContext = RenderContext.getInstance(securityContext, request, response);
+				final EditMode edit               = renderContext.getEditMode(user);
+				final String[] uriParts           = PathHelper.getParts(path);
+				boolean isDynamicPath             = false;
+				DOMNode rootElement               = null;
+				AbstractNode dataNode             = null;
+				File file                         = null;
 
-				renderContext.setResourceProvider(config.getResourceProvider());
+				if (response.getStatus() != HttpServletResponse.SC_OK) {
 
-				final EditMode edit = renderContext.getEditMode(user);
-
-				DOMNode rootElement = null;
-				AbstractNode dataNode = null;
-
-				final String[] uriParts = PathHelper.getParts(path);
-
-				if (uriParts == null) {
-					logger.error("URI parts array is null, shouldn't happen.");
-					throw new FrameworkException(500, "URI parts array is null, shouldn't happen.");
-				}
-
-				if (uriParts.length == 0) {
-
-					logger.debug("No path supplied, trying to find index page");
-
-					// find a visible page
-					rootElement = findIndexPage(securityContext, edit);
-
-				} else {
-
-					// special optimization for UUID-addressed partials
-					if (uriParts.length == 1 && Settings.isValidUuid(uriParts[0])) {
-
-						final AbstractNode node = findNodeByUuid(securityContext, uriParts[0]);
-						if (node != null && node instanceof DOMElement) {
-
-							rootElement = (DOMElement) node;
-
-							renderContext.setIsPartialRendering(true);
-						}
-					}
+					// response already has non-200 status. checking for existing error pages
+					rootElement = getErrorPageForStatus(response, securityContext);
 
 					if (rootElement == null) {
 
-						rootElement = findPage(securityContext, path, edit);
-
-						// special case where path is defined as "/custom/path" and request URI is "/custom/path/"
-						if (rootElement == null && path.endsWith("/")) {
-							rootElement = findPage(securityContext, path.substring(0, path.length() - 1), edit);
-						}
-
-					} else {
-
-						dontCache = true;
+						// did not find error page and the status was already set -> send the error response
+						tx.success();
+						return;
 					}
 				}
 
-				File file = null;
+				if (rootElement == null && file == null) {
 
-				if (rootElement == null) { // No page found
+					if (uriParts == null) {
+						logger.error("URI parts array is null, shouldn't happen.");
+						throw new FrameworkException(500, "URI parts array is null, shouldn't happen.");
+					}
+
+					if (uriParts.length == 0) {
+
+						logger.debug("No path supplied, trying to find index page");
+
+						// find a visible page
+						rootElement = findIndexPage(securityContext, edit);
+
+					} else {
+
+						// special optimization for UUID-addressed partials
+						if (uriParts.length == 1 && Settings.isValidUuid(uriParts[0])) {
+
+							final AbstractNode node = findNodeByUuid(securityContext, uriParts[0]);
+							if (node != null && node instanceof DOMElement) {
+
+								rootElement = (DOMElement) node;
+
+								renderContext.setIsPartialRendering(true);
+							}
+						}
+
+						if (rootElement == null) {
+
+							// check dynamic paths
+							final DOMNode pathResult = PagePaths.findPageAndResolveParameters(renderContext, path);
+							if (pathResult != null) {
+
+								rootElement   = pathResult;
+								isDynamicPath = true;
+							}
+
+						}
+
+						if (rootElement == null) {
+
+							rootElement = findPage(securityContext, path, edit);
+
+							// special case where path is defined as "/custom/path" and request URI is "/custom/path/"
+							if (rootElement == null && path.endsWith("/")) {
+								rootElement = findPage(securityContext, path.substring(0, path.length() - 1), edit);
+							}
+
+						} else {
+
+							dontCache = true;
+						}
+					}
+				}
+
+
+				if (rootElement == null && file == null) { // No page found
 
 					// In case of a file, try to find a file with the query string in the filename
 					final String queryString = request.getQueryString();
-
-					// Look for a file, first include the query string
 					if (StringUtils.isNotBlank(queryString)) {
+
+						// Look for a file, first include the query string
 						file = findFile(securityContext, request, path + "?" + queryString);
 					}
 
 					// If no file with query string in the file name found, try without query string
 					if (file == null) {
+
 						file = findFile(securityContext, request, path);
 					}
 
 					if (file == null) {
-
 
 						for (int i = 0; i < uriParts.length; i++) {
 
@@ -421,6 +471,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 					streamFile(securityContext, file, request, response, edit, true);
 					tx.success();
+
 					return;
 				}
 
@@ -561,6 +612,9 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 			// isolate request authentication in a transaction
 			try (final Tx tx = StructrApp.getInstance().tx()) {
+
+				tx.prefetchHint("HTTP POST auth " + path);
+
 				securityContext = auth.initializeAndExamineRequest(request, response);
 				tx.success();
 			}
@@ -568,6 +622,8 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			final App app = StructrApp.getInstance(securityContext);
 
 			try (final Tx tx = app.tx()) {
+
+				tx.prefetchHint("HTTP POST " + path);
 
 				// Ensure access mode is frontend
 				securityContext.setAccessMode(AccessMode.Frontend);
@@ -589,7 +645,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 					return;
 				}
 
-				final Principal user = securityContext.getUser(false);
+				final PrincipalInterface user = securityContext.getUser(false);
 				if (user != null) {
 
 					// Don't cache if a user is logged in
@@ -598,10 +654,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 				}
 
 				final RenderContext renderContext = RenderContext.getInstance(securityContext, request, response);
-
-				renderContext.setResourceProvider(config.getResourceProvider());
-
-				final EditMode edit = renderContext.getEditMode(user);
+				final EditMode edit               = renderContext.getEditMode(user);
 
 				DOMNode rootElement   = null;
 				AbstractNode dataNode = null;
@@ -616,13 +669,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 				} else {
 
-					if (rootElement == null) {
-
-						rootElement = findPage(securityContext, path, edit);
-
-					} else {
-						dontCache = true;
-					}
+					rootElement = findPage(securityContext, path, edit);
 				}
 
 				if (rootElement == null) { // No page found
@@ -662,11 +709,6 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 					}
 
 					if (dataNode != null && !(dataNode instanceof Linkable)) {
-
-						// Last path part matches a data node
-						// Remove last path part and try again searching for a page
-						// clear possible entry points
-						request.removeAttribute(POSSIBLE_ENTRY_POINTS_KEY);
 
 						rootElement = findPage(securityContext, StringUtils.substringBeforeLast(path, PathHelper.PATH_SEP), edit);
 
@@ -849,7 +891,15 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			@Override
 			public void run() {
 
+				String name = "unknown";
+
 				try (final Tx tx = app.tx()) {
+
+					DOMNode.prefetchDOMNodes(rootNode.getUuid());
+
+					name = rootNode.getName();
+
+					tx.prefetchHint("Render page " + name);
 
 					// render
 					rootNode.render(renderContext, 0);
@@ -859,7 +909,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 				} catch (Throwable t) {
 
-					logger.warn("Error while rendering page {}: {}", rootNode.getName(), t.getMessage());
+					logger.warn("Error while rendering page {}: {}", name, t.getMessage());
 					logger.warn(ExceptionUtils.getStackTrace(t));
 
 					try {
@@ -914,7 +964,6 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 					}
 
 				} catch (EofException ee) {
-
 					// ignore EofException which (by jettys standards) should be handled less verbosely
 
 				} catch (IOException | InterruptedException t) {
@@ -927,17 +976,14 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 				// prevent async from running into default timeout of 30s
 				async.complete();
+				finished.set(true);
 
 				if (t instanceof QuietException || t.getCause() instanceof QuietException) {
 					// ignore exceptions which (by jettys standards) should be handled less verbosely
 				} else {
 
-					final SecurityContext sc = renderContext.getSecurityContext();
-					final Principal user     = sc.getUser(false);
-					final String username    = (user != null) ? user.getName() : "anonymous";
-
 					logger.warn("Could not flush the response body content to the client, probably because the network connection was terminated.");
-					logger.warn(" -> From: {} | URI: {} | Query: {} | User: {}", request.getRemoteAddr(), request.getRequestURI(), request.getQueryString(), username);
+					logger.warn(" -> From: {} | URI: {} | Query: {}", request.getRemoteAddr(), request.getRequestURI(), request.getQueryString());
 				}
 			}
 		});
@@ -981,6 +1027,23 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 		return null;
 	}
 
+	private Page getErrorPageForStatus(final HttpServletResponse response, final SecurityContext securityContext) throws IOException, FrameworkException {
+
+		final List<Page> errorPages = StructrApp.getInstance(securityContext).nodeQuery(Page.class).and(StructrApp.key(Page.class, "showOnErrorCodes"), "" + response.getStatus(), false).getAsList();
+
+		for (final Page errorPage : errorPages) {
+
+			if (isVisibleForSite(securityContext.getRequest(), errorPage)) {
+
+				return errorPage;
+			}
+		}
+
+		response.sendError(response.getStatus());
+
+		return null;
+	}
+
 	/**
 	 * Find first node whose name matches the last part of the given path
 	 *
@@ -1008,13 +1071,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 				query.parent();
 			}
 
-
-			final List<AbstractNode> results = query.getAsList();
-
-			logger.debug("{} results", results.size());
-			request.setAttribute(POSSIBLE_ENTRY_POINTS_KEY, results);
-
-			return (results.size() > 0 ? (AbstractNode) results.get(0) : null);
+			return (AbstractNode) query.getFirst();
 		}
 
 		return null;
@@ -1051,18 +1108,21 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 	 */
 	private File findFile(final SecurityContext securityContext, final HttpServletRequest request, final String path) throws FrameworkException {
 
-		List<Linkable> entryPoints = findPossibleEntryPoints(securityContext, request, path);
+		List<Linkable> entryPoints = findFiles(securityContext, request, path);
 
 		// If no results were found, try to replace whitespace by '+' or '%20'
 		if (entryPoints.isEmpty()) {
-			entryPoints = findPossibleEntryPoints(securityContext, request, PathHelper.replaceWhitespaceByPlus(path));
+			entryPoints = findFiles(securityContext, request, PathHelper.replaceWhitespaceByPlus(path));
 		}
 
 		if (entryPoints.isEmpty()) {
-			entryPoints = findPossibleEntryPoints(securityContext, request, PathHelper.replaceWhitespaceByPercentTwenty(path));
+			entryPoints = findFiles(securityContext, request, PathHelper.replaceWhitespaceByPercentTwenty(path));
 		}
 
 		for (Linkable node : entryPoints) {
+
+			// prefetch file data
+			FileHelper.prefetchFileData(node.getUuid());
 
 			if (node instanceof File && (path.equals(node.getPath()) || node.getUuid().equals(PathHelper.getName(path)))) {
 				return (File) node;
@@ -1202,17 +1262,18 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 			final App app = StructrApp.getInstance();
 
-			List<Principal> results;
+			List<PrincipalInterface> results;
 			try (final Tx tx = app.tx()) {
 
-				results = app.nodeQuery(Principal.class).and(confirmationKey, key).getAsList();
+				results = app.nodeQuery(PrincipalInterface.class).and(confirmationKey, key).getAsList();
 
 				tx.success();
 			}
 
 			if (!results.isEmpty()) {
 
-				final Principal user = results.get(0);
+				final PrincipalInterface user = results.get(0);
+				long userId;
 
 				try (final Tx tx = app.tx()) {
 
@@ -1235,11 +1296,13 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 						logger.warn("Confirmation key for user {} is not valid anymore - refusing login.", user.getName());
 					}
 
+					userId = user.getNode().getId().getId();
+
 					tx.success();
 				}
 
 				// broadcast login to cluster for the user
-				Services.getInstance().broadcastLogin(user);
+				Services.getInstance().broadcastLogin(userId);
 
 				// Redirect to target path
 				final String targetPath = filterMaliciousRedirects(request.getParameter(TARGET_PATH_KEY));
@@ -1293,17 +1356,18 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 			final App app = StructrApp.getInstance();
 
-			List<Principal> results;
+			List<PrincipalInterface> results;
 			try (final Tx tx = app.tx()) {
 
-				results = app.nodeQuery(Principal.class).and(confirmationKeyKey, key).getAsList();
+				results = app.nodeQuery(PrincipalInterface.class).and(confirmationKeyKey, key).getAsList();
 
 				tx.success();
 			}
 
 			if (!results.isEmpty()) {
 
-				final Principal user = results.get(0);
+				final PrincipalInterface user = results.get(0);
+				long userId;
 
 				try (final Tx tx = app.tx()) {
 
@@ -1331,10 +1395,12 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 						logger.warn("Confirmation key for user {} is not valid anymore - refusing login.", user.getName());
 					}
 
+					userId = user.getNode().getId().getId();
+
 					tx.success();
 				}
 
-				Services.getInstance().broadcastLogin(user);
+				Services.getInstance().broadcastLogin(userId);
 			}
 
 			// Redirect to target path
@@ -1352,15 +1418,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 	private List<Linkable> findPossibleEntryPointsByUuid(final SecurityContext securityContext, final HttpServletRequest request, final String uuid) throws FrameworkException {
 
-		final List<Linkable> possibleEntryPoints = (List<Linkable>) request.getAttribute(POSSIBLE_ENTRY_POINTS_KEY);
-
-		if (CollectionUtils.isNotEmpty(possibleEntryPoints)) {
-			return possibleEntryPoints;
-		}
-
-		if (uuid.length() > 0) {
-
-			logger.debug("Requested id: {}", uuid);
+		if (!uuid.isEmpty()) {
 
 			final Query query = StructrApp.getInstance(securityContext).nodeQuery();
 
@@ -1372,60 +1430,25 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 					.parent()
 				.and(GraphObject.id, uuid);
 
-			// Searching for pages needs super user context anyway
-			List<Linkable> results = query.getAsList();
-
-			logger.debug("{} results", results.size());
-			request.setAttribute(POSSIBLE_ENTRY_POINTS_KEY, results);
-
-			return (List<Linkable>) results;
+			return query.getAsList();
 		}
 
 		return Collections.EMPTY_LIST;
 	}
 
-	private List<Linkable> findPossibleEntryPointsByPath(final SecurityContext securityContext, final HttpServletRequest request, final String path) throws FrameworkException {
+	private List<Linkable> findFilesByPath(final SecurityContext securityContext, final HttpServletRequest request, final String path) throws FrameworkException {
 
-		final List<Linkable> possibleEntryPoints = (List<Linkable>) request.getAttribute(POSSIBLE_ENTRY_POINTS_KEY);
-
-		if (CollectionUtils.isNotEmpty(possibleEntryPoints)) {
-			return possibleEntryPoints;
-		}
-
-		if (path.length() > 0) {
+		if (!path.isEmpty()) {
 
 			logger.debug("Requested path: {}", path);
 
-			final Query pageQuery = StructrApp.getInstance(securityContext).nodeQuery();
-
-			pageQuery.and(StructrApp.key(Page.class, "path"), path).andType(Page.class);
-			final List<Linkable> pages = pageQuery.getAsList();
-
-			final Query fileQuery = StructrApp.getInstance(securityContext).nodeQuery();
-			fileQuery.and(StructrApp.key(AbstractFile.class, "path"), path).andTypes(File.class);
-
-			final List<Linkable> files = fileQuery.getAsList();
-
-			logger.debug("Found {} pages and {} files/folders", new Object[] { pages.size(), files.size() });
-
-			final List<Linkable> linkables = (List<Linkable>) pages;
-			linkables.addAll(files);
-
-			request.setAttribute(POSSIBLE_ENTRY_POINTS_KEY, linkables);
-
-			return linkables;
+			return StructrApp.getInstance(securityContext).nodeQuery(Linkable.class).and(pathPropertyForSearch, path).getAsList();
 		}
 
 		return Collections.EMPTY_LIST;
 	}
 
-	private List<Linkable> findPossibleEntryPoints(final SecurityContext securityContext, final HttpServletRequest request, final String path) throws FrameworkException {
-
-		List<Linkable> possibleEntryPoints = (List<Linkable>) request.getAttribute(POSSIBLE_ENTRY_POINTS_KEY);
-
-		if (CollectionUtils.isNotEmpty(possibleEntryPoints)) {
-			return possibleEntryPoints;
-		}
+	private List<Linkable> findFiles(final SecurityContext securityContext, final HttpServletRequest request, final String path) throws FrameworkException {
 
 		final int numberOfParts = PathHelper.getParts(path).length;
 
@@ -1433,7 +1456,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 			logger.debug("Requested name {}", path);
 
-			possibleEntryPoints = findPossibleEntryPointsByPath(securityContext, request, path);
+			List<Linkable> possibleEntryPoints = findFilesByPath(securityContext, request, path);
 
 			if (possibleEntryPoints.isEmpty() && numberOfParts == 1) {
 				possibleEntryPoints = findPossibleEntryPointsByUuid(securityContext, request, PathHelper.getName(path));
@@ -1453,6 +1476,8 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 	}
 
 	private static boolean notModifiedSince(final HttpServletRequest request, HttpServletResponse response, final NodeInterface node, final boolean dontCache) {
+
+		final long t0 = System.currentTimeMillis();
 
 		boolean notModified = false;
 		final Date lastModified = node.getLastModifiedDate();
@@ -1522,6 +1547,8 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			response.sendError(HttpServletResponse.SC_NOT_FOUND);
 			return;
 		}
+
+		final long t0 = System.currentTimeMillis();
 
 		final ServletOutputStream out         = response.getOutputStream();
 		final String downloadAsFilename       = request.getParameter(DOWNLOAD_AS_FILENAME_KEY);
@@ -1668,14 +1695,17 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			}
 		}
 
-
 		// WIDGET mode means "opened in frontend", which we don't want to count as an external download
 		if (!EditMode.WIDGET.equals(edit)) {
 
 			// call onDownload callback
 			try {
 
-				file.invokeMethod(securityContext, "onDownload", callbackMap, false, new EvaluationHints());
+				final AbstractMethod method = Methods.resolveMethod(file.getClass(), "onDownload");
+				if (method != null) {
+
+					method.execute(securityContext, file, Arguments.fromMap(callbackMap), new EvaluationHints());
+				}
 
 			} catch (FrameworkException fex) {
 				logger.warn("", fex);
@@ -1818,7 +1848,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			}
 
 			// check Http Basic Authentication headers
-			final Principal principal = getPrincipalForAuthorizationHeader(request.getHeader("Authorization"));
+			final PrincipalInterface principal = getPrincipalForAuthorizationHeader(request.getHeader("Authorization"));
 			if (principal != null) {
 
 				final SecurityContext securityContext = SecurityContext.getInstance(principal, AccessMode.Frontend);
@@ -1851,7 +1881,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 		return HttpBasicAuthResult.NO_BASIC_AUTH;
 	}
 
-	private Principal getPrincipalForAuthorizationHeader(final String authHeader) {
+	private PrincipalInterface getPrincipalForAuthorizationHeader(final String authHeader) {
 
 		if (authHeader != null) {
 
@@ -1878,7 +1908,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 				if (StringUtils.isNoneBlank(username, password)) {
 
 					try {
-						return AuthHelper.getPrincipalForPassword(Principal.name, username, password);
+						return AuthHelper.getPrincipalForPassword(PrincipalInterface.name, username, password);
 
 					} catch (Throwable t) {
 						// ignore
@@ -1917,6 +1947,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 		return null;
 	}
+
 	// ----- nested classes -----
 	private enum AuthState {
 		NoBasicAuth, MustAuthenticate, Authenticated
@@ -1953,6 +1984,28 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 		public Linkable getRootElement() {
 			return rootElement;
+		}
+	}
+
+	private static class UuidCacheEntry {
+
+		String fileUuid = null;
+		String domUuid  = null;
+		String dataUuid = null;
+
+		public UuidCacheEntry(final DOMNode domNode, final File fileNode, final AbstractNode dataNode) {
+
+			if (domNode != null) {
+				this.domUuid = domNode.getUuid();
+			}
+
+			if (fileNode != null) {
+				this.fileUuid = fileNode.getUuid();
+			}
+
+			if (dataNode != null) {
+				this.dataUuid = dataNode.getUuid();
+			}
 		}
 	}
 }
