@@ -28,6 +28,7 @@ import org.eclipse.jetty.websocket.api.Session;
 import org.eclipse.jetty.websocket.api.WebSocketListener;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.structr.api.SyntaxErrorException;
 import org.structr.common.AccessMode;
 import org.structr.common.SecurityContext;
 import org.structr.common.error.DatabaseServiceNotAvailableException;
@@ -39,7 +40,7 @@ import org.structr.core.Services;
 import org.structr.core.app.App;
 import org.structr.core.app.StructrApp;
 import org.structr.core.auth.Authenticator;
-import org.structr.core.entity.Principal;
+import org.structr.core.entity.PrincipalInterface;
 import org.structr.core.graph.Tx;
 import org.structr.rest.auth.AuthHelper;
 import org.structr.rest.auth.SessionHelper;
@@ -127,6 +128,8 @@ public class StructrWebSocket implements WebSocketListener {
 
 		try (final Tx tx = app.tx()) {
 
+			tx.prefetchHint("Websocket close");
+
 			this.session = null;
 
 			syncController.unregisterClient(this);
@@ -181,10 +184,16 @@ public class StructrWebSocket implements WebSocketListener {
 
 			try (final Tx tx = StructrApp.getInstance().tx()) {
 
+				tx.prefetchHint("Websocket command auth " + command);
+
+				final boolean isPing = "PING".equals(command);
+
+				tx.setIsPing(isPing);
+
 				if (sessionIdFromMessage != null) {
 
-					// try to authenticated this connection by sessionId
-					authenticate(SessionHelper.getShortSessionId(sessionIdFromMessage), command.equals("PING"));
+					// try to authenticate this connection by sessionId
+					authenticate(SessionHelper.getShortSessionId(sessionIdFromMessage), isPing);
 				}
 
 				// we only permit LOGIN commands if authentication based on sessionId was not successful
@@ -214,7 +223,7 @@ public class StructrWebSocket implements WebSocketListener {
 			try {
 
 
-				AbstractCommand abstractCommand = (AbstractCommand) type.newInstance();
+				AbstractCommand abstractCommand = (AbstractCommand) type.getDeclaredConstructor().newInstance();
 
 				abstractCommand.setWebSocket(this);
 				abstractCommand.setSession(session);
@@ -249,9 +258,18 @@ public class StructrWebSocket implements WebSocketListener {
 
 					try (final Tx tx = app.tx(true, true, true)) {
 
+						// enable prefetching for websockets
+						tx.prefetchHint("Websocket " + abstractCommand.getClass().getSimpleName() + " " + webSocketData.getCommand() + " " + webSocketData.getNodeDataStringValue("type"));
+
+						if (abstractCommand instanceof PingCommand) {
+
+							tx.setIsPing(true);
+						}
+
 						// store authenticated-Flag in webSocketData
 						// so the command can access it
 						webSocketData.setSessionValid(isAuthenticated());
+						webSocketData.setSecurityContext(securityContext);
 
 						abstractCommand.processMessage(webSocketData);
 
@@ -263,9 +281,12 @@ public class StructrWebSocket implements WebSocketListener {
 
 					try (final Tx tx = app.tx(true, true, true)) {
 
+						tx.prefetchHint("Websocket " + abstractCommand.getClass().getSimpleName() + " " + webSocketData.getCommand() + " " + webSocketData.getNodeDataStringValue("type"));
+
 						// store authenticated-Flag in webSocketData
 						// so the command can access it
 						webSocketData.setSessionValid(isAuthenticated());
+						webSocketData.setSecurityContext(securityContext);
 
 						// commit transaction
 						tx.success();
@@ -276,7 +297,12 @@ public class StructrWebSocket implements WebSocketListener {
 
 				}
 
-			} catch (FrameworkException | InstantiationException | IllegalAccessException t) {
+			} catch (Throwable t) {
+
+				if (!(t instanceof SyntaxErrorException)) {
+
+					t.printStackTrace();
+				}
 
 				try (final Tx tx = app.tx(true, true, true)) {
 
@@ -299,9 +325,6 @@ public class StructrWebSocket implements WebSocketListener {
 				} catch (FrameworkException fex) {
 					logger.warn("Unable to send websocket result: {}", fex.getMessage());
 				}
-
-				return;
-
 			}
 
 		} else {
@@ -310,9 +333,6 @@ public class StructrWebSocket implements WebSocketListener {
 
 			// send 400 Bad Request
 			send(MessageBuilder.status().code(400).message("Unknown command").build(), true);
-
-			return;
-
 		}
 	}
 
@@ -348,6 +368,8 @@ public class StructrWebSocket implements WebSocketListener {
 		}
 
 		try (final Tx tx = StructrApp.getInstance(securityContext).tx(true, true, true)) {
+
+			tx.prefetchHint("Websocket send " + message.getCommand());
 
 			if (message.getCode() == 0) {
 				// default is: 200 OK
@@ -386,6 +408,8 @@ public class StructrWebSocket implements WebSocketListener {
 			logger.warn("Unable to send websocket message to remote client: Connection might have been terminated before all content was delivered.");
 
 		} catch (Throwable t) {
+
+			t.printStackTrace();
 
 			if (t instanceof QuietException || t.getCause() instanceof QuietException) {
 				// ignore exceptions which (by jettys standards) should be handled less verbosely
@@ -455,7 +479,7 @@ public class StructrWebSocket implements WebSocketListener {
 
 		final Services services = Services.getInstance();
 		final String nodeName   = services.getNodeName();
-		final Principal user    = AuthHelper.getPrincipalForSessionId(sessionId, isPing);
+		final PrincipalInterface user    = AuthHelper.getPrincipalForSessionId(sessionId, isPing);
 
 		if (user != null) {
 
@@ -498,7 +522,7 @@ public class StructrWebSocket implements WebSocketListener {
 
 		try {
 
-			final AbstractCommand msg = (AbstractCommand) command.newInstance();
+			final AbstractCommand msg = (AbstractCommand) command.getDeclaredConstructor().newInstance();
 
 			commandSet.put(msg.getCommand(), command);
 
@@ -518,7 +542,7 @@ public class StructrWebSocket implements WebSocketListener {
 		return request;
 	}
 
-	public Principal getCurrentUser() {
+	public PrincipalInterface getCurrentUser() {
 
 		return (securityContext == null ? null : securityContext.getUser(false));
 	}
@@ -535,11 +559,11 @@ public class StructrWebSocket implements WebSocketListener {
 
 	public boolean isAuthenticated() {
 
-		final Principal user = getCurrentUser();
+		final PrincipalInterface user = getCurrentUser();
 		return (!timedOut && user != null && isPrivilegedUser(user));
 	}
 
-	public boolean isPrivilegedUser(Principal user) {
+	public boolean isPrivilegedUser(PrincipalInterface user) {
 
 		return (user != null && user.isAdmin());
 	}
@@ -573,7 +597,7 @@ public class StructrWebSocket implements WebSocketListener {
 		return null;
 	}
 
-	public void setAuthenticated(final String sessionId, final Principal user) {
+	public void setAuthenticated(final String sessionId, final PrincipalInterface user) {
 
 		securityContext = SecurityContext.getInstance(user, AccessMode.Backend);
 		securityContext.setSessionId(sessionId);
