@@ -21,6 +21,7 @@ package org.structr.test.csv.test;
 import io.restassured.RestAssured;
 import io.restassured.filter.log.ResponseLoggingFilter;
 import io.restassured.internal.RestAssuredResponseImpl;
+import java.lang.reflect.InvocationTargetException;
 import org.apache.commons.lang3.StringEscapeUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -44,7 +45,7 @@ public class CsvTest extends StructrCsvTest {
 
 	private static final Logger logger = LoggerFactory.getLogger(CsvTest.class.getName());
 
-	private final String testOneResource = "/test_one";
+	private final String testOneResource = "/TestOne";
 	private final String testOneCSVWithDefaultCharacters5EntriesNoError = "\"id\";\"type\";\"name\";\"anInt\";\"aLong\";\"aDate\"\r\n"
 			+ "\"0979aebeb9ae42a7b3594db3da12875e\";\"TestOne\";\"TestOne-1\";\"1\";\"10\";\"2012-09-18T00:33:12+0000\"\r\n"
 			+ "\"a3e07672b1064c28a1093b7024c7087d\";\"TestOne\";\"TestOne-2\";\"2\";\"20\";\"2012-09-18T01:33:12+0000\"\r\n"
@@ -91,13 +92,13 @@ public class CsvTest extends StructrCsvTest {
 	public void test01InitServlet() {
 
 		try {
-			final HttpServiceServlet servlet = (HttpServiceServlet) Class.forName(CsvServlet.class.getName()).newInstance();
+			final HttpServiceServlet servlet = (HttpServiceServlet) Class.forName(CsvServlet.class.getName()).getDeclaredConstructor().newInstance();
 
 			assertNotNull(servlet);
 
 			assertTrue(servlet instanceof CsvServlet);
 
-		} catch (ClassNotFoundException | InstantiationException | IllegalAccessException ex) {
+		} catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException | SecurityException | IllegalArgumentException | InvocationTargetException ex) {
 			logger.warn("", ex);
 			fail("Unexcepted exception");
 		}
